@@ -8,8 +8,10 @@ has Str $.name;
 has uint32 $.code-point;  # unicode mapping (if known)
 has FT_UInt $.cid;    # encoding point
 has FT_UInt $.gid;    # font glyph index
-has FT_UInt $.dx is rw;     # unscaled x displacement x 1000
-has FT_UInt $.dy is rw = 0; # unscaled y displacement x 1000 (not yet used)
+has FT_UInt $.ax is rw;     # unscaled x advance x 1000
+has FT_UInt $.ay is rw = 0; # unscaled y advance x 1000 (not yet used)
+
+method dx is DEPRECATED<ax> { $.ax }
 
 =begin pod
 
@@ -24,8 +26,8 @@ use PDF::Font::Loader::Glyph;
 
 # load from character encodings
 my PDF::Font::Loader::Glyph @glyphs = $font.glyphs: "Hi";
-say @glyphs[0].raku; # Glyph.new(:name<H>, :code-point(72),  :cid(48), :gid(26), :dx(823), :dy(0))
-say @glyphs[1].raku; # Glyph.new(:name<i>, :code-point(105), :cid(4),  :gid(21), :dx(334), :dy(0)
+say @glyphs[0].raku; # Glyph.new(:name<H>, :code-point(72),  :cid(48), :gid(26), :ax(823), :ay(0))
+say @glyphs[1].raku; # Glyph.new(:name<i>, :code-point(105), :cid(4),  :gid(21), :ax(334), :ay(0)
 
 # load from CIDs
 @glyphs = $font.glyphs: [48, 4];
@@ -53,7 +55,7 @@ Actual glyph identifier for the glyph. This is the index into the font's associa
 
 For `Identity-H` and `Identity-V` encoded fonts and other fonts without a `cid-to-gid-map` table, the `gid` will be the same as the `cid`.
 
-=head3 dx
+=head3 ax
 
 The width (horizontal displacement to the next glyph). The value should be multiplied by font-size / 1000 to compute
 the actual displacement.
@@ -62,7 +64,7 @@ Note that the width of a glyph can be indirectly set or altered via the font obj
 
 `$font.glyph-width('i') -= 100`
 
-=head3 dy
+=head3 ay
 
 The height (vertical displacement to the next glyph) for a vertically written glyph. This method is not-yet-implemented,
 and always returns zero.
